# AoC-2025-FPGA

./: LICENSE  README.md  advent-of-fpga-2025.opam.locked
.github/workflows/: ci.yaml
advent-of-fpga-2025/: 1  :w  Makefile  README.md  advent-of-fpga-2025.opam  advent-of-fpga-2025.opam.locked  dune-project
advent-of-fpga-2025/.github/workflows/: ci.yaml
advent-of-fpga-2025/lib/exercise/: exercise.ml
advent-of-fpga-2025/lib/problem-4/: problem_4.ml
advent-of-fpga-2025/src/common/: dune
advent-of-fpga-2025/src/input-parser/: input_parser.ml
advent-of-fpga-2025/src/problem-4/: config.ml  dune  forklift.ml  line_buffer.ml  problem_4.ml  sliding_window_intf.ml  solver.ml  window_processor.ml
advent-of-fpga-2025/test/: adder_test.ml  dune  problem_4_forklift_ctrl_test.ml  problem_4_forklift_test.ml  problem_4_solver_test.ml  problem_4_test.ml  problem_4_window_processor_test.ml  pwm_test.ml  util.ml
go-solution/1/: \  go.mod  main.go
ocaml-solution/: problem_2_1.ml  problem_2_2.ml
ocaml-solutions/: dune-project  ocaml-solutions.opam  ocaml-solutions.opam.locked
src/common/: placeholder.ml
src/exercise/: dune
src/input-parser/: dune  input_parser.ml
src/problem-4/: dune  forklift.ml  forklift.mli  sliding_window_intf.ml  window_processor.ml
test/: dune  problem_4_forklift_test.ml  problem_4_solver_test.ml  problem_4_window_processor_test.ml  pwm_test.ml  util.ml
verilog/: window_processor.v
