(lang dune 3.20)

(name advent-of-fpga-2025)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name advent-of-fpga-2025)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
 (ocaml (>= 4.14.1))          
 (dune (>= 3.12))             
 (hardcaml (>= v0.16.0))      
 (ppx_hardcaml (>= v0.16.0))  
 (hardcaml_waveterm (>= v0.16.0)) 
 (core (>= v0.16.0))          
)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
