(lang dune 3.20)

(name ocaml-solutions)

(generate_opam_files true)

(source
 (github jkulrativid/AoC-2025-FPGA))

(authors "K. Jetnipit <jetnipit.kul@gmail.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml-solutions)
 (synopsis "Advent of Code 2025 Solutions in OCaml")
 (description "TODO: summarize")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
